--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"postman-request": "^2.88.1-postman.24"
 	},
 	"devDependencies": {
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"nodemon": "^2.0.4"
 	}
 }
