--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"@types/dotenv": "^8.2.0",
+		"axios": "^0.20.0",
 		"express": "^4.17.1",
 		"hbs": "^4.1.1",
 		"postman-request": "^2.88.1-postman.24"
