--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"@types/dotenv": "^8.2.0",
 		"axios": "^0.20.0",
 		"express": "^4.17.1",
-		"hbs": "^4.1.1",
-		"postman-request": "^2.88.1-postman.24"
+		"hbs": "^4.1.1"
 	},
 	"devDependencies": {
 		"dotenv": "^8.2.0",
